@@ -17,8 +17,8 @@ package io.confluent.ksql.planner.plan;
 
 import static io.confluent.ksql.GenericRow.genericRow;
 import static io.confluent.ksql.function.UserFunctionLoaderTestUtil.loadAllUserFunctions;
+import static io.confluent.ksql.planner.plan.PlanTestUtil.PROCESS_NODE;
 import static io.confluent.ksql.planner.plan.PlanTestUtil.SOURCE_NODE;
-import static io.confluent.ksql.planner.plan.PlanTestUtil.TRANSFORM_NODE;
 import static io.confluent.ksql.planner.plan.PlanTestUtil.getNodeByName;
 import static io.confluent.ksql.util.LimitedProxyBuilder.methodParams;
 import static org.hamcrest.CoreMatchers.equalTo;
@@ -145,7 +145,7 @@ public class AggregateNodeTest {
         .collect(Collectors.toList());
 
     assertThat(sourceNode.predecessors(), equalTo(Collections.emptySet()));
-    assertThat(successors, equalTo(Collections.singletonList(TRANSFORM_NODE)));
+    assertThat(successors, equalTo(List.of(PROCESS_NODE)));
     assertThat(sourceNode.topicSet(), equalTo(ImmutableSet.of("test1")));
   }
 
@@ -494,11 +494,6 @@ public class AggregateNodeTest {
                 this)
             .forward("mapValues", methodParams(ValueMapperWithKey.class), this)
             .forward("mapValues", methodParams(ValueMapperWithKey.class, Named.class),
-                this)
-            .forward("transformValues",
-                methodParams(ValueTransformerWithKeySupplier.class, String[].class), this)
-            .forward("transformValues",
-                methodParams(ValueTransformerWithKeySupplier.class, Named.class, String[].class),
                 this)
             .forward("process",
                 methodParams(ProcessorSupplier.class, String[].class), this)
